Updated campaign and banner validity checks to utilize the integer pooling system.
git-svn-id: file:///var/svn/nexopia/trunk/adblaster@3058 7be605d3-0650-4ba7-bb8c-0af3a60b5258